add notification feature and UI for clinic screen
